--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wordle-clone-master",
+  "name": "wordle-clone-thiago",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
